--- a/Mapchip/Mapchip/Mapchip.vcxproj
+++ b/Mapchip/Mapchip/Mapchip.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{DB3FCA37-2820-4284-8C5A-27747A71F33F}</ProjectGuid>
-    <RootNamespace>2DAction</RootNamespace>
+    <RootNamespace>Mapchip</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -126,7 +126,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Src\Button.cpp" />
     <ClCompile Include="Src\Engine\Engine.cpp" />
     <ClCompile Include="Src\Engine\Graphics.cpp" />
     <ClCompile Include="Src\Engine\Input.cpp" />
@@ -136,13 +135,9 @@
     <ClCompile Include="Src\Engine\Sound.cpp" />
     <ClCompile Include="Src\Engine\Texture.Manager.cpp" />
     <ClCompile Include="Src\Engine\Window.cpp" />
-    <ClCompile Include="Src\GameScene.cpp" />
     <ClCompile Include="Src\Main.cpp" />
-    <ClCompile Include="Src\TitleScene.cpp" />
-    <ClCompile Include="Src\Update.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\Button.h" />
     <ClInclude Include="Src\Engine\Engine.h" />
     <ClInclude Include="Src\Engine\EngineConstant.h" />
     <ClInclude Include="Src\Engine\Graphics.h" />
@@ -155,10 +150,6 @@
     <ClInclude Include="Src\Engine\Window.h" />
     <ClInclude Include="Src\Common\Size.h" />
     <ClInclude Include="Src\Common\Vec.h" />
-    <ClInclude Include="Src\enum.h" />
-    <ClInclude Include="Src\GameScene.h" />
-    <ClInclude Include="Src\TitleScene.h" />
-    <ClInclude Include="Src\Update.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
